--- a/bodyprotection.html
+++ b/bodyprotection.html
@@ -72,7 +72,6 @@
             border-radius: 8px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             text-align: justify;
-			margin-top: 100px;
         }
         h1 {
             text-align: center;
@@ -269,6 +268,28 @@ body {
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+	  border-radius: 20px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.5); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
         </style>
     </head>
     <body>
@@ -461,11 +482,14 @@ body {
 				</div>     <!-- End header-wrapper -->
 			</header>	<!-- END HEADER -->
 
-<br>
-
+<br><br><br>
+<div class="banner" style="padding: 30px;">
+    <img src="images/vindus_clients_images/Body Protection .gif" alt="Banner Image" height="350px" width="500px">
+    <h4 class="banner-heading">Body Protection</h4>
+  </div>
 <div class="container2" style="background-image: url('images/vindus_clients_images/hey.gif');">
 <div class="container1">
-    <h1 style="color: rgb(4, 4, 77);">Body Protection</h1>
+    <h1 style="color: rgb(4, 4, 77);"></h1>
     <p>Personal Protective Equipment for Clothing & Body Wear</p>
     <p><strong>Compliance with National Standards</strong></p>
     <p >Standards are not currently available for all types of protective clothing or body protection. Where such standards exist, only those items of protective clothing and equipment that meet NIOSH, ANSI, ASTM, or NFPA standards, as appropriate, may be used. Questions regarding the suitability of a specific item for a given hazard should be referred either to the manufacturer or to EHS.</p>
