--- a/ems.html
+++ b/ems.html
@@ -195,6 +195,27 @@ body {
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.7); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
 </style>
 	</head>
 
@@ -410,9 +431,10 @@ body {
 		<div class="container">
 			<div class="card mb-3">
 				<div class="row no-gutters">
-					<div class="col-md-12">
-						<img src="images/vindus_clients_images/ems4.jpg" class="card-img" alt="Banner Image" width="500px">
-					</div>
+					<div class="banner">
+						<img src="images/vindus_clients_images/tree3.gif" alt="Banner Image" width="500px" height="380px">
+						<h4 class="banner-heading">Environment Management System</h4>
+					  </div>
 				</div>
 			</div>
 
