--- a/employeehs.html
+++ b/employeehs.html
@@ -474,6 +474,28 @@
 ul{
     padding-left: 20px;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+	  border-radius: 20px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.5); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
     </style>
 </head>
 
@@ -679,12 +701,10 @@ ul{
 
         <Main>
             <div class="container-fluid mt-90">
-                <div class="project-title">
-                                                
-                    <!-- Title -->	
-                    <h2 class="s-30 w-700" style="background-image: url('images/vindus_clients_images/mlc.jpg');  background-position: center; color: #fff; text-align: center; padding: 100px; height: 300px;">
-                        MLC Employee Health Services                      </h2>
-                      
+                <div class="banner" style="padding: 30px;">
+                    <img src="images/vindus_clients_images/MLC Employee Health Services .gif" alt="Banner Image" height="350px" width="500px">
+                    <h4 class="banner-heading">Employee Health Services</h4>
+                  </div>
             </div>
 
             <section style="text-align: justify;">
