--- a/about.html
+++ b/about.html
@@ -570,7 +570,7 @@ span{
 <div class="row">
 
         <div class="col-md-6">
-        <p style="text-align: justify;">As on now a days implementing & maintaining QEHS is found very difficult due to many reasons such as Change in Standards & Laws frequently, Management not knowing the benefits in implementing EHS, Employers not having enough knowledge in EHS, Employees not having required knowledge in EHS, neglecting EHS for the sake of reaching targets by the middle management, Governing bodies not working up to the standards, Workforce not having sufficient knowledge in EHS... etc. So www.mlcqehs.com is formed to enhance the EHS Profession by providing knowledge to EHS Professionals irrespective of experience to implement EHS in their respective industry.</p></div>
+        <p style="text-align: justify;">As on now a days implementing & maintaining QEHS is found very difficult due to many reasons such as Change in Standards & Laws frequently, Management not knowing the benefits in implementing QEHS, Employers not having enough knowledge in QEHS, Employees not having required knowledge in QEHS, neglecting QEHS for the sake of reaching targets by the middle management, Governing bodies not working up to the standards, Workforce not having sufficient knowledge in QEHS... etc. So www.mlcqehs.com is formed to enhance the QEHS Profession by providing knowledge to QEHS Professionals irrespective of experience to implement QEHS in their respective industry.</p></div>
 
         <div class="col-md-6">
             <img src="images/vindus_clients_images/website_logo_solid_background.png">
