--- a/Esg.html
+++ b/Esg.html
@@ -170,26 +170,13 @@
     }
 }
 
-.esg-section {
-	background-image: url('images/vindus_clients_images/nam.jpg');
-      color: white;
-      padding: 50px 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	  background-size: cover;
-    }
+
     .esg-header {
       text-align: center;
       margin-bottom: 30px;
       font-weight: bold;
     }
-    .esg-card {
-      background: rgba(255, 255, 255, 0.5);
-      border: none;
-      border-radius: 10px;
-      transition: transform 0.3s;
-      text-align: justify;
-    }
+    
     .esg-card:hover {
       transform: scale(1.05);
     }
@@ -264,6 +251,28 @@
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+	  border-radius: 20px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.5); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
 </style>
 	</head>
 
@@ -472,14 +481,16 @@
 <br>
 <br><br><br>
 
+<div class="banner" style="padding: 30px;">
+    <img src="images/vindus_clients_images/river1.gif" alt="Banner Image" height="350px" width="500px">
+    <h4 class="banner-heading">Esg End to End Solution</h4>
+  </div>
 
-
-<div class="container esg-section">
-    <h1 class="esg-header">MLC ESG End to End Solution</h1>
+<div class="container ">
     <div class="row">
-      <div class="col-md-6 offset-md-3">
-        <div class="card esg-card">
-          <div class="card-body">
+      <div class="col-md-12 ">
+        <div class="card esg-card bg-primary text-white" >
+          <div class="card-body" >
             <h5 class="card-title" >What is ESG?</h5>
             <p class="card-text">The ESG framework helps identify, organize, analyze, prioritize, and accordingly guide decisions on various business risks.</p>
           </div>
