--- a/PLANTSETUPandUPGRADATION.html
+++ b/PLANTSETUPandUPGRADATION.html
@@ -479,6 +479,29 @@
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      height: 450px;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+      height: 450px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 20%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.5); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
     </style>
 </head>
 
@@ -677,17 +700,13 @@
             <!-- End header-wrapper -->
         </header>
         <!-- END HEADER -->
-      <br>
 
         <Main>
             <div class="container-fluid mt-90">
-                <div class="project-title">
-                                                
-                    <!-- Title -->	
-                    <h2 class="s-30 w-700" style="background-image: url('images/vindus_clients_images/setup.jpg'); background-size: cover; background-position: center; color: #fff; text-align: center; padding: 100px; height: 300px;">
-                        Quality Plant setup and upgradation 
-                      </h2>
-                      
+                <div class="banner" style="padding: 30px;">
+                    <img src="images/vindus_clients_images/setup.jpg" alt="Banner Image" height="350px" width="500px">
+                    <h4 class="banner-heading">                        Quality Plant setup and upgradation 
+                    </h4>
             </div>
 
             <section class="custom-section">
