--- a/aboveneck.html
+++ b/aboveneck.html
@@ -396,10 +396,9 @@
 
 <div class="banner" style="padding: 30px;">
     <img src="images/vindus_clients_images/aboveneck.gif" alt="Banner Image" height="300px" width="500px">
-    <h4 class="banner-heading">Above Neck</h4>
+    <h4 class="banner-heading">Above neck PPE:</h4>
   </div>
-<div class="imge" style="background-image: url(images/vindus_clients_images/fall2.jpg);">
-<h1 style="color: rgb(251, 248, 248); text-align: center;">Above neck PPE:</h1>
+<div class="imge" style="background-image: url(images/vindus_clients_images/fall2.jpg);padding-top: 10px;">
 <div class="container1">
     <h2>Head Protection:</h2>
     <p>Here are some common types being used in different occupations:</p>
