--- a/fireprotection.html
+++ b/fireprotection.html
@@ -279,13 +279,12 @@
       text-align: center;
       color: white;
       width: 100%;
-      height: 450px;
       overflow: hidden;
 	  
     }
     .banner img {
       width: 100%;
-      height: 450px;
+	  border-radius: 20px;
     }
     .banner-heading {
       position: absolute;
@@ -501,13 +500,12 @@
 
 				</div>     <!-- End header-wrapper -->
 			</header>	
-<br>
 
 
 
 <div class="container-fluid mt-90">
-	<div class="banner">
-		<img src="images/vindus_clients_images/fire.gif" alt="Banner Image">
+	<div class="banner" style="padding: 30px;">
+		<img src="images/vindus_clients_images/fire.gif" alt="Banner Image" width="500px" height="350px">
 		<h4 class="banner-heading">Fire Protection</h4>
 	  </div>
     </div>
