--- a/safety.html
+++ b/safety.html
@@ -204,13 +204,12 @@ body {
       text-align: center;
       color: white;
       width: 100%;
-      height: 450px;
       overflow: hidden;
+	  padding: 30px;
 	  
     }
     .banner img {
       width: 100%;
-      height: 450px;
     }
     .banner-heading {
       position: absolute;
@@ -431,8 +430,8 @@ body {
 <br>
 <br><br>
 <div class="banner">
-    <img src="images/vindus_clients_images/safety.gif" alt="Banner Image">
-    <h4 class="banner-heading">Safety Audit</h4>
+    <img src="images/vindus_clients_images/safety.gif" alt="Banner Image" width="500px" height="350px">
+    <h2 class="banner-heading">Safety Audit</h2>
   </div>	 
 
 <div class="container mt-5" style="text-align: justify;">
