--- a/env.html
+++ b/env.html
@@ -179,20 +179,18 @@ body {
       text-align: center;
       color: white;
       width: 100%;
-      height: 450px;
       overflow: hidden;
 	  
     }
     .banner img {
       width: 100%;
-      height: 450px;
     }
     .banner-heading {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background-color: rgba(7, 85, 254, 0.7); /* Blue transparent background */
+      background-color: rgba(7, 85, 254, 0.5); /* Blue transparent background */
       padding: 20px;
       border-radius: 10px;
       color: white;
@@ -414,7 +412,7 @@ body {
             <!-- Main content -->
             <div class="container mt-5">
                 <div class="banner">
-					<img src="images/vindus_clients_images/environment.gif" alt="Banner Image">
+					<img src="images/vindus_clients_images/environment.gif" alt="Banner Image" width="500px" height="300px">
 					<h2 class="banner-heading">Environmental Audit</h2>
 				  </div>
 				  <br>
