--- a/survelliance.html
+++ b/survelliance.html
@@ -178,13 +178,11 @@ body {
       text-align: center;
       color: white;
       width: 100%;
-      height: 450px;
       overflow: hidden;
 	  
     }
     .banner img {
       width: 100%;
-      height: 450px;
     }
     .banner-heading {
       position: absolute;
@@ -409,7 +407,7 @@ body {
 
 <div class="container mt-5">
 	<div class="banner">
-		<img src="images/vindus_clients_images/surveillance.gif" alt="Banner Image">
+		<img src="images/vindus_clients_images/surveillance.gif" alt="Banner Image" height="300px" width="500px">
 		<h4 class="banner-heading">Surveillance Audit</h4>
 	  </div>
     <div>
