--- a/ehstrainings.html
+++ b/ehstrainings.html
@@ -69,10 +69,7 @@
   width:1024 ;
   background-size: cover;
 }
-.row-ms{
-  padding-top:100px;
-  
-}
+
     .head {
       background:linear-gradient(#000040,#1560bd);
       color: #fff;
@@ -304,13 +301,11 @@
       text-align: center;
       color: white;
       width: 100%;
-      height: 450px;
       overflow: hidden;
 	  
     }
     .banner img {
       width: 100%;
-      height: 450px;
     }
     .banner-heading {
       position: absolute;
@@ -523,8 +518,8 @@
 			</header>	<!-- END HEADER -->
 
 <br><br><br>
-<div class="banner">
-	<img src="images/vindus_clients_images/MLC Training .gif" alt="Banner Image">
+<div class="banner" style="padding: 30px;">
+	<img src="images/vindus_clients_images/MLC Training .gif" alt="Banner Image" width="500px" height="330px">
 	<h4 class="banner-heading">MLC Trainings</h4>
   </div>
   <div class="row-ms">
