--- a/online.html
+++ b/online.html
@@ -412,13 +412,11 @@ body {
       text-align: center;
       color: white;
       width: 100%;
-      height: 450px;
       overflow: hidden;
 	  
     }
     .banner img {
-      width: 100%;
-      height: 450px;
+      width: 90%;
     }
     .banner-heading {
       position: absolute;
@@ -640,20 +638,19 @@ body {
 			</header>	
 
 <br>
-<br><br>
+<br><br><br>
 <div class="banner">
-  <img src="images/vindus_clients_images/online.gif" alt="Banner Image">
+  <img src="images/vindus_clients_images/online.gif" alt="Banner Image" width="500px" height="350px">
   <h4 class="banner-heading">Online Training</h4>
 </div>
 
-<div class="main" style="padding: 30px;">
+<div class="main">
   <div class="jumbotron" style="background-color: #1560bd;">
       <h1 class="display-4" style="font-weight: 400; color:white; text-align: center;">ML Consultants QEHS Training</h1>
       <p class="lead" style="font-weight: 400; text-align: justify;padding-top: 20p;">MLC aims to offer cutting-edge training and research services to public and private organizations in India. MLC QEHS Training delivers professional training and research programs that are varied in topics including Environment, Health, Fire & Safety.</p>
       <hr class="my-4">
       <p style="text-align: justify;">We deliver agency-specific training, career development programs, and customized consulting solutions to enrich learning and optimize individual, group, and organizational performance.</p>
   </div>
-
 
   <!-- Online Training Section -->
   <div class="online-training" style="padding: 30px;">
