--- a/classroom.html
+++ b/classroom.html
@@ -271,13 +271,11 @@ body {
       text-align: center;
       color: white;
       width: 100%;
-      height: 450px;
       overflow: hidden;
 	  
     }
     .banner img {
-      width: 100%;
-      height: 450px;
+      width: 90%;
     }
     .banner-heading {
       position: absolute;
@@ -499,15 +497,15 @@ body {
 <br>
 
 <br><br>
+<br>
 
 
-
-<div class="banner">
-  <img src="images/vindus_clients_images/classroom.gif" alt="Banner Image">
+    <div class="banner">
+  <img src="images/vindus_clients_images/classroom.gif" alt="Banner Image" height="300px" width="500px">
   <h4 class="banner-heading">Classroom Training</h4>
 </div>
 
-<div class="main" style="padding: 30px;">
+<div class="main" >
   <div class="jumbotron" style="background-color: #1560bd;">
       <h1 class="display-4" style="font-weight: bold;color:white; text-align: center;" >ML Consultants QEHS Training</h1>
       <p class="lead" style="font-weight: 400; text-align: justify; padding-top: 20px;">MLC aim is to offer cutting-edge training and research services to public and private organizations in India. MLC QEHS Training's delivers professional training and research programmes that are varied in topics including: - Environment, Health, Fire & Safety.
