--- a/corporate.html
+++ b/corporate.html
@@ -283,13 +283,11 @@ body {
       text-align: center;
       color: white;
       width: 100%;
-      height: 450px;
       overflow: hidden;
 	  
     }
     .banner img {
-      width: 100%;
-      height: 450px;
+      width: 90%;
     }
     .banner-heading {
       position: absolute;
@@ -510,17 +508,17 @@ body {
 			</header>	
 
 <br>
-<br><br>
+<br><br><br>
 
 
 <div class="banner">
-  <img src="images/vindus_clients_images/Corporate training.gif" alt="Banner Image">
+  <img src="images/vindus_clients_images/Corporate training.gif" alt="Banner Image" height="300px" width="500px">
   <h4 class="banner-heading">Corporate Training</h4>
 </div>
 
 
 
-<div class="main" style="padding: 30px;">
+<div class="main">
   <div class="jumbotron" style="background-color: #1560bd;">
       <h1 class="display-4" style="font-weight: bold;color:white;" >ML Consultants QEHS Training</h1>
       <p class="lead" style="font-weight: 400; padding-top: 20px; text-align: justify;">MLC aim is to offer cutting-edge training and research services to public and private organizations in India. MLC QEHS Training's delivers professional training and research programmes that are varied in topics including: - Environment, Health, Fire & Safety.
