--- a/fireequipments.html
+++ b/fireequipments.html
@@ -191,13 +191,11 @@ body {
       text-align: center;
       color: white;
       width: 100%;
-      height: 450px;
       overflow: hidden;
 	  
     }
     .banner img {
-      width: 100%;
-      height: 450px;
+      width: 90%;
     }
     .banner-heading {
       position: absolute;
@@ -420,7 +418,7 @@ body {
 
 <div class="container-fluid mt-90">
 	<div class="banner">
-		<img src="images/vindus_clients_images/Fire Equipments .gif" alt="Banner Image">
+		<img src="images/vindus_clients_images/Fire Equipments .gif" alt="Banner Image" width="500px" height="350px">
 		<h4 class="banner-heading">Fire Equiments</h4>
 	  </div>
 		  
