--- a/firedetection.html
+++ b/firedetection.html
@@ -298,13 +298,11 @@
       text-align: center;
       color: white;
       width: 100%;
-      height: 450px;
       overflow: hidden;
 	  
     }
     .banner img {
-      width: 100%;
-      height: 450px;
+      width: 90%;
     }
     .banner-heading {
       position: absolute;
@@ -528,7 +526,7 @@
 
 <div class="container-fluid mt-5">
     <div class="banner">
-		<img src="images/vindus_clients_images/fire detection.gif" alt="Banner Image">
+		<img src="images/vindus_clients_images/fire detection.gif" alt="Banner Image" width="500px" height="320px">
 		<h4 class="banner-heading">Fire Detection</h4>
 	  </div>
 </div>
