--- a/mlcfiresystemservices.html
+++ b/mlcfiresystemservices.html
@@ -214,13 +214,11 @@ body {
       text-align: center;
       color: white;
       width: 100%;
-      height: 450px;
       overflow: hidden;
 	  
     }
     .banner img {
-      width: 100%;
-      height: 450px;
+      width: 90%;
     }
     .banner-heading {
       position: absolute;
@@ -444,8 +442,8 @@ body {
     
 <div class="container-fluid mt-90">
 	<div class="banner">
-		<img src="images/vindus_clients_images/mlc fire system.gif" alt="Banner Image" >
-		<h4 class="banner-heading">MLC Fire System Services</h4>
+		<img src="images/vindus_clients_images/mlc fire system.gif" alt="Banner Image" height="300px" width="500px">
+		<h5 class="banner-heading">MLC Fire System Services</h5>
 	  </div>
 
 <br>
