--- a/industrialhygene.html
+++ b/industrialhygene.html
@@ -234,6 +234,27 @@
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 90%;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.7); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
     </style>
 </head>
 
@@ -438,10 +459,14 @@
             <!-- End header-wrapper -->
         </header>
         <!-- END HEADER -->
-<br><br>
+<br><br><br><br>
+<div class="banner">
+    <img src="images/vindus_clients_images/Industrial hygene.gif" alt="Banner Image" height="330px" width="500px">
+    <h5 class="banner-heading">Industrial hygiene</h5>
+  </div>
         <Main>
             <!-- IHSS Services Offered Section -->
-            <section style="margin-top: 75px;text-align: justify;">
+            <section style="text-align: justify;">
                 <div class="container">
                     <h3 class="text-center my-4 " style="color: #1560bd;">Industrial Hygiene Services </h3>
                     <div class="row">
