--- a/hac.html
+++ b/hac.html
@@ -501,6 +501,28 @@
         .col-md-6.offset-md-3 {
             margin-top: 20px;
         }
+
+        .banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 90%;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.5); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
     </style>
 </head>
 
@@ -708,13 +730,10 @@
 
         <Main>
              <div class="container-fluid mt-90">
-                <div class="project-title">
-                                                
-                    <!-- Title -->	
-                    <h2 class="s-30 w-700" style="background-image: url('images/vindus_clients_images/hazard.gif'); background-size: cover; background-position: center; color: #fff; text-align: center; padding: 100px; height: 300px;">
-                        MLC HAC (Hazardous Area Classification) Services                      </h2>
-                      
-            </div>
+                <div class="banner">
+                    <img src="images/vindus_clients_images/Hac Services12.gif" alt="Banner Image" height="330px" width="500px">
+                    <h5 class="banner-heading">                        MLC HAC (Hazardous Area Classification) Services</h5>
+                  </div>
 
             <section style="text-align: justify;">
 
