--- a/PLANTSETUPandUPGRADATION.html
+++ b/PLANTSETUPandUPGRADATION.html
@@ -484,17 +484,15 @@
       text-align: center;
       color: white;
       width: 100%;
-      height: 450px;
       overflow: hidden;
 	  
     }
     .banner img {
-      width: 100%;
-      height: 450px;
+      width: 90%;
     }
     .banner-heading {
       position: absolute;
-      top: 20%;
+      top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       background-color: rgba(7, 85, 254, 0.5); /* Blue transparent background */
@@ -704,7 +702,7 @@
         <Main>
             <div class="container-fluid mt-90">
                 <div class="banner" style="padding: 30px;">
-                    <img src="images/vindus_clients_images/setup.jpg" alt="Banner Image" height="350px" width="500px">
+                    <img src="images/vindus_clients_images/plant.gif" alt="Banner Image" height="350px" width="500px">
                     <h4 class="banner-heading">                        Quality Plant setup and upgradation 
                     </h4>
             </div>
