--- a/auditing.html
+++ b/auditing.html
@@ -237,13 +237,11 @@ li{
       text-align: center;
       color: white;
       width: 100%;
-      height: 450px;
       overflow: hidden;
 	  
     }
     .banner img {
-      width: 100%;
-      height: 450px;
+      width: 90%;
     }
     .banner-heading {
       position: absolute;
@@ -461,10 +459,10 @@ li{
 
 <br>
 <br><br>
-
-<div class="banner">
-    <img src="images/vindus_clients_images/Audit.gif" alt="Banner Image">
-    <h1 class="banner-heading">Auditing</h1>
+<br>
+  <div class="banner">
+    <img src="images/vindus_clients_images/Auidinggg.gif" alt="Banner Image" width="500px" height="300px">
+    <h4 class="banner-heading">Auditing</h4>
   </div>
 
 
