--- a/safetystudies.html
+++ b/safetystudies.html
@@ -239,13 +239,11 @@
       text-align: center;
       color: white;
       width: 100%;
-      height: 450px;
       overflow: hidden;
 	  
     }
     .banner img {
-      width: 100%;
-      height: 450px;
+      width: 90%;
     }
     .banner-heading {
       position: absolute;
@@ -461,11 +459,11 @@
 				</div>     <!-- End header-wrapper -->
 			</header>	<!-- END HEADER -->
 
-<br><br>
+<br><br><br><br>
 
     <Main>
         <div class="banner">
-            <img src="images/vindus_clients_images/safetyst.gif" alt="Banner Image">
+            <img src="images/vindus_clients_images/safety Studies.gif" alt="Banner Image" height="350px" width="500px">
             <h4 class="banner-heading">Safety Studies</h4>
           </div>
         <section style="margin-top: 55px;">
