--- a/ims.html
+++ b/ims.html
@@ -219,28 +219,44 @@ body {
 	overflow-y: scroll;
 }
 .banner {
-      position: relative;
-      text-align: center;
-      color: white;
-      width: 100%;
-      height: 450px;
-      overflow: hidden;
-	  
-    }
-    .banner img {
-      width: 100%;
-      height: 450px;
-    }
-    .banner-heading {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: rgba(7, 85, 254, 0.7); /* Blue transparent background */
-      padding: 20px;
-      border-radius: 10px;
-      color: white;
-    }
+  position: relative;
+  overflow: hidden;
+  background-color: #f0f0f0; /* Optional: to show the banner area */
+  height: 350px; /* Set height to match image height */
+}
+
+.banner-images {
+  display: flex;
+  width: calc(800px * 12 + 15px * 11); /* Total width of all images including gaps */
+  animation: scroll 50s linear infinite;
+  gap: 10px;
+
+}
+
+.banner-images img {
+  width: 800px;
+  height: 350px;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-800px * 6 - 15px * 5)); /* Adjust the total width to scroll */
+  }
+}
+
+.banner-heading {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  color: white; /* Adjust color for visibility */
+  background-color: rgba(13, 75, 208, 0.8); /* Optional: background for readability */
+  padding: 5px 10px;
+  font-size: 24px; /* Adjust font size as needed */
+}
+
        </style>
 	</head>
 
@@ -452,17 +468,30 @@ body {
 
 <br>
 <br>
-	
+<br>	
 
-
-
+<div class="banner">
+    <div class="banner-images">
+      <img src="images/vindus_clients_images/IMS Auditing-1.jpg" alt="Banner Image 1">
+      <img src="images/vindus_clients_images/IMS Auditing-2.jpg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/IMS Auditing-3.jpg" alt="Banner Image 3">
+      <img src="images/vindus_clients_images/IMS Auditing-1.jpg" alt="Banner Image 1">
+      <img src="images/vindus_clients_images/IMS Auditing-2.jpg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/IMS Auditing-3.jpg" alt="Banner Image 3">
+      <!-- Duplicate set of images for continuous scroll -->
+      <img src="images/vindus_clients_images/IMS Auditing-1.jpg" alt="Banner Image 1">
+      <img src="images/vindus_clients_images/IMS Auditing-2.jpg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/IMS Auditing-3.jpg" alt="Banner Image 3">
+      <img src="images/vindus_clients_images/IMS Auditing-1.jpg" alt="Banner Image 1">
+      <img src="images/vindus_clients_images/IMS Auditing-2.jpg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/IMS Auditing-3.jpg" alt="Banner Image 3">
+    </div>
+    <h1 class="banner-heading">IMS Auditing</h1>
+  </div>
 
 <div class="container mt-5">
 	<div class="card mb-3">
-		<div class="banner">
-			<img src="images/vindus_clients_images/IMS Auditing .gif" alt="Banner Image">
-			<h1 class="banner-heading">IMS Auditing</h1>
-		  </div>
+		
 	</div>
 	<div class="container">
 	<h1 style="color: #1560bd;">What are called IMS Audits</h1><br>
