--- a/about.html
+++ b/about.html
@@ -467,7 +467,7 @@ span{
         <div class="text">
           <h2>About Us</h2>
           <h5>Virtual Assistant at your Service,<br> All QEHS services at one place</h5>
-          <p>Skilled Administrative Support Professional with 23 Years' Experience in EHS .</p>
+          <p>Skilled Administrative Support Professional with 23 Years' Experience in QEHS .</p>
           <div class="data">
           <a href="contact.html" class="hire">Connect with me!</a>
           </div>
