--- a/ims.html
+++ b/ims.html
@@ -473,18 +473,18 @@ body {
 <div class="banner">
     <div class="banner-images">
       <img src="images/vindus_clients_images/IMS Auditing-1.jpg" alt="Banner Image 1">
-      <img src="images/vindus_clients_images/IMS Auditing-2.jpg" alt="Banner Image 2">
-      <img src="images/vindus_clients_images/IMS Auditing-3.jpg" alt="Banner Image 3">
+      <img src="images/vindus_clients_images/imssss.jpg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/IMS Auditing-2.jpg" alt="Banner Image 3">
       <img src="images/vindus_clients_images/IMS Auditing-1.jpg" alt="Banner Image 1">
-      <img src="images/vindus_clients_images/IMS Auditing-2.jpg" alt="Banner Image 2">
-      <img src="images/vindus_clients_images/IMS Auditing-3.jpg" alt="Banner Image 3">
+      <img src="images/vindus_clients_images/imssss.jpg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/IMS Auditing-2.jpg" alt="Banner Image 3">
       <!-- Duplicate set of images for continuous scroll -->
       <img src="images/vindus_clients_images/IMS Auditing-1.jpg" alt="Banner Image 1">
-      <img src="images/vindus_clients_images/IMS Auditing-2.jpg" alt="Banner Image 2">
-      <img src="images/vindus_clients_images/IMS Auditing-3.jpg" alt="Banner Image 3">
+      <img src="images/vindus_clients_images/imssss.jpg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/IMS Auditing-2.jpg" alt="Banner Image 3">
       <img src="images/vindus_clients_images/IMS Auditing-1.jpg" alt="Banner Image 1">
-      <img src="images/vindus_clients_images/IMS Auditing-2.jpg" alt="Banner Image 2">
-      <img src="images/vindus_clients_images/IMS Auditing-3.jpg" alt="Banner Image 3">
+      <img src="images/vindus_clients_images/imssss.jpg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/IMS Auditing-2.jpg" alt="Banner Image 3">
     </div>
     <h1 class="banner-heading">IMS Auditing</h1>
   </div>
