--- a/auditing.html
+++ b/auditing.html
@@ -558,7 +558,7 @@ li{
             <div class="col-md-6">
                 <div class="p-4" style="text-align: justify;">
                     <ul >
-                        <li>MLC does not have (and will not form) any relationships with companies who offer consultancy, internal audit services or other services that can be construed as having an impact on the auditing services provided by Concord Associates. Any proposed relationship between Maha Lakshmi Consultancy and any other company will undergo a risk assessment by the Auditing Services Committee prior to that relationship being formalized</li>
+                        <li>MLC does not have (and will not form) any relationships with companies who offer consultancy, internal audit services or other services that can be construed as having an impact on the auditing services provided by Concord Associates. Any proposed relationship between ML Consultancy and any other company will undergo a risk assessment by the Auditing Services Committee prior to that relationship being formalized</li>
                         <li>Any current relationships with companies, organizations and individuals will be assessed for the risks on regular basis to ensure that the relationship does not impact upon the impartiality of the auditing process. The risk assessment will be reviewed by the Auditing Services Committee.</li>
                         <li>Individuals employed by or otherwise contracted to MLC are required to document and record their current and past relationships with all companies. Any situation past or present which associates to potential conflict of interest is declared by MLC. MLC will use the information to identify any threats to impartiality and will not use that individual in any capacity unless they can demonstrate that there is no conflict of interest. The risk assessment will be reviewed by the Auditing Services Committee</li>
 
@@ -571,7 +571,7 @@ li{
             <div class="col-md-6">
                 <div class="p-4" style="text-align: justify;">
                     <ul >
-                        <li>MLC shall only appoint external auditors who are not external auditors of another auditing organisation. Maha Lakshmi Consultancy promptly inform the Client whenever there is a change of external auditors.</li>
+                        <li>MLC shall only appoint external auditors who are not external auditors of another auditing organisation. ML Consultancy promptly inform the Client whenever there is a change of external auditors.</li>
                         <li>MLC ensures that activities of separate legal entities, with which the auditing organisation or the legal entity of which it forms a part has relationships, do not compromise the impartiality of its auditing activities.</li>
                         <li>MLC does not market or offer its activities as linked with the activities of an organization that provides consultancy. MLC does not state or imply that certification would be simpler, easier, faster or less expensive if a specified consultancy organization were used and will take appropriate legal action should any such link be identified.</li>
 
