--- a/powersystem.html
+++ b/powersystem.html
@@ -533,13 +533,11 @@
       text-align: center;
       color: white;
       width: 100%;
-      height: 450px;
       overflow: hidden;
 	  
     }
     .banner img {
-      width: 100%;
-      height: 450px;
+      width: 90%;
     }
     .banner-heading {
       position: absolute;
@@ -759,13 +757,13 @@
             <!-- End header-wrapper -->
         </header>
         <!-- END HEADER -->
-<br>
+<br><br>
 
         <Main>
             
             <section style="margin-top: 75px;">
                 <div class="banner">
-                    <img src="images/vindus_clients_images/powersys.gif" alt="Banner Image">
+                    <img src="images/vindus_clients_images/powersys.gif" alt="Banner Image" height="300px" width="500px">
                     <h4 class="banner-heading">Power System Studies</h4>
                   </div>
                 <section class="why-us-section">
