--- a/industrialhygene.html
+++ b/industrialhygene.html
@@ -462,13 +462,13 @@
 <br><br><br><br>
 <div class="banner">
     <img src="images/vindus_clients_images/Industrial hygene.gif" alt="Banner Image" height="330px" width="500px">
-    <h5 class="banner-heading">Industrial hygiene</h5>
+    <h5 class="banner-heading">Industrial Hygiene Services </h5>
   </div>
+  <br>
         <Main>
             <!-- IHSS Services Offered Section -->
             <section style="text-align: justify;">
                 <div class="container">
-                    <h3 class="text-center my-4 " style="color: #1560bd;">Industrial Hygiene Services </h3>
                     <div class="row">
                         <div class="col-md-12">
                             <div class="service-card card">
