--- a/documentation.html
+++ b/documentation.html
@@ -516,12 +516,11 @@
           <div class="card mb-3">
 			<div class="banner">
 				<img src="images/vindus_clients_images/Documentation .gif" alt="Banner Image" width="500px" height="300px">
-				<h4 class="banner-heading">Documentation</h4>
+				<h4 class="banner-heading">QEHS Documentation</h4>
 			  </div>
           </div>
           <div class="row">
               <div class="col-md-12 text-center mb-4">
-                  <h2 class="orange-heading">QEHS Documentation</h2>
               </div>
           </div>
 
