--- a/certification3.html
+++ b/certification3.html
@@ -187,6 +187,45 @@
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+  position: relative;
+  overflow: hidden;
+  background-color: #f0f0f0; /* Optional: to show the banner area */
+  height: 350px; /* Set height to match image height */
+}
+
+.banner-images {
+  display: flex;
+  width: calc(800px * 12 + 15px * 11); /* Total width of all images including gaps */
+  animation: scroll 50s linear infinite;
+  gap: 10px;
+
+}
+
+.banner-images img {
+  width: 800px;
+  height: 350px;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-800px * 6 - 15px * 5)); /* Adjust the total width to scroll */
+  }
+}
+
+.banner-heading {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  color: white; /* Adjust color for visibility */
+  background-color: rgba(13, 75, 208, 0.8); /* Optional: background for readability */
+  padding: 5px 10px;
+  font-size: 24px; /* Adjust font size as needed */
+}
+
 </style>
 	</head>
 
@@ -392,19 +431,31 @@
 			</header>	
 
 <br>
-<br>
+<br><br>
 
+<div class="banner">
+    <div class="banner-images">
+      <img src="images/vindus_clients_images/iso9001banner.jpg" alt="Banner Image 1">
+      <img src="images/vindus_clients_images/iso90-1.jpg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/iso90-2.jpg" alt="Banner Image 3">
+      <img src="images/vindus_clients_images/iso9001banner.jpg" alt="Banner Image 1">
+      <img src="images/vindus_clients_images/iso90-1.jpg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/iso90-2.jpg" alt="Banner Image 3">
+      <!-- Duplicate set of images for continuous scroll -->
+      <img src="images/vindus_clients_images/iso9001banner.jpg" alt="Banner Image 1">
+      <img src="images/vindus_clients_images/iso90-1.jpg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/iso90-2.jpg" alt="Banner Image 3">
+      <img src="images/vindus_clients_images/iso9001banner.jpg" alt="Banner Image 1">
+      <img src="images/vindus_clients_images/iso90-1.jpg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/iso90-2.jpg" alt="Banner Image 3">
+    </div>
+    <h1 class="banner-heading">ISO 9001:2015</h1>
+  </div>
 
 <Main>
-    <section style="margin-top:75px;">
+    <section style="margin-top:55px;">
         <div class="container">
-            <div class="card mb-3">
-                <div class="row no-gutters">
-                    <div class="col-md-12">
-                        <img src="images/vindus_clients_images/iso9001banner.jpg" class="card-img" alt="Banner Image" width="500px">
-                    </div>
-                </div>
-            </div>
+            
             <div class="row" style="text-align: justify;">
                 <div class="col-md-12">
                     <div class="custom-card">
