--- a/certification1.html
+++ b/certification1.html
@@ -450,17 +450,17 @@
 <div class="banner">
     <div class="banner-images">
       <img src="images/vindus_clients_images/iso451.jpg" alt="Banner Image 1">
-      <img src="images/vindus_clients_images/iso451-1.jpeg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/iso451-3.jpg" alt="Banner Image 2">
       <img src="images/vindus_clients_images/iso451-2.jpg" alt="Banner Image 3">
       <img src="images/vindus_clients_images/iso451.jpg" alt="Banner Image 1">
-      <img src="images/vindus_clients_images/iso451-1.jpeg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/iso451-3.jpg" alt="Banner Image 2">
       <img src="images/vindus_clients_images/iso451-2.jpg" alt="Banner Image 3">
       <!-- Duplicate set of images for continuous scroll -->
       <img src="images/vindus_clients_images/iso451.jpg" alt="Banner Image 1">
-      <img src="images/vindus_clients_images/iso451-1.jpeg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/iso451-3.jpg" alt="Banner Image 2">
       <img src="images/vindus_clients_images/iso451-2.jpg" alt="Banner Image 3">
       <img src="images/vindus_clients_images/iso451.jpg" alt="Banner Image 1">
-      <img src="images/vindus_clients_images/iso451-1.jpeg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/iso451-3.jpg" alt="Banner Image 2">
       <img src="images/vindus_clients_images/iso451-2.jpg" alt="Banner Image 3">
     </div>
     <h1 class="banner-heading">ISO 45001:2018</h1>
