--- a/certification3.html
+++ b/certification3.html
@@ -436,17 +436,17 @@
 <div class="banner">
     <div class="banner-images">
       <img src="images/vindus_clients_images/iso9001banner.jpg" alt="Banner Image 1">
-      <img src="images/vindus_clients_images/iso90-1.jpg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/iso90-3.jpeg" alt="Banner Image 2">
       <img src="images/vindus_clients_images/iso90-2.jpg" alt="Banner Image 3">
       <img src="images/vindus_clients_images/iso9001banner.jpg" alt="Banner Image 1">
-      <img src="images/vindus_clients_images/iso90-1.jpg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/iso90-3.jpeg" alt="Banner Image 2">
       <img src="images/vindus_clients_images/iso90-2.jpg" alt="Banner Image 3">
       <!-- Duplicate set of images for continuous scroll -->
       <img src="images/vindus_clients_images/iso9001banner.jpg" alt="Banner Image 1">
-      <img src="images/vindus_clients_images/iso90-1.jpg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/iso90-3.jpeg" alt="Banner Image 2">
       <img src="images/vindus_clients_images/iso90-2.jpg" alt="Banner Image 3">
       <img src="images/vindus_clients_images/iso9001banner.jpg" alt="Banner Image 1">
-      <img src="images/vindus_clients_images/iso90-1.jpg" alt="Banner Image 2">
+      <img src="images/vindus_clients_images/iso90-3.jpeg" alt="Banner Image 2">
       <img src="images/vindus_clients_images/iso90-2.jpg" alt="Banner Image 3">
     </div>
     <h1 class="banner-heading">ISO 9001:2015</h1>
