--- a/supplierqualificationaudit.html
+++ b/supplierqualificationaudit.html
@@ -759,7 +759,7 @@
       <img src="images/vindus_clients_images/supplier-2.jpg" alt="Banner Image 2">
       <img src="images/vindus_clients_images/supplier-3.png" alt="Banner Image 3">
     </div>
-    <h1 class="banner-heading">ISO 9001:2015</h1>
+    <h1 class="banner-heading">Supplier Qualification Audit</h1>
   </div>
 
         <Main>
