--- a/fivestar1.html
+++ b/fivestar1.html
@@ -311,7 +311,7 @@
         }
         
         .accordion-item {
-            background-color: #f0faff;
+            background-color: #fffaf0;
             /* Light blue background */
             margin-bottom: 10px;
         }
@@ -434,6 +434,45 @@
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+  position: relative;
+  overflow: hidden;
+  background-color: #f0f0f0; /* Optional: to show the banner area */
+  height: 350px; /* Set height to match image height */
+}
+
+.banner-images {
+  display: flex;
+  width: calc(800px * 12 + 15px * 11); /* Total width of all images including gaps */
+  animation: scroll 50s linear infinite;
+  gap: 10px;
+
+}
+
+.banner-images img {
+  width: 800px;
+  height: 350px;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-800px * 6 - 15px * 5)); /* Adjust the total width to scroll */
+  }
+}
+
+.banner-heading {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  color: white; /* Adjust color for visibility */
+  background-color: rgba(13, 75, 208, 0.8); /* Optional: background for readability */
+  padding: 5px 10px;
+  font-size: 24px; /* Adjust font size as needed */
+}
+
     </style>
 </head>
 
@@ -643,12 +682,28 @@
         <br><br><br>
 
 
-
+        <div class="banner">
+            <div class="banner-images">
+              <img src="images/vindus_clients_images/occupational.jpg" alt="Banner Image 1">
+              <img src="images/vindus_clients_images/occupational-2.webp" alt="Banner Image 2">
+              <img src="images/vindus_clients_images/occupational-3.webp" alt="Banner Image 3">
+              <img src="images/vindus_clients_images/occupational.jpg" alt="Banner Image 1">
+              <img src="images/vindus_clients_images/occupational-2.webp" alt="Banner Image 2">
+              <img src="images/vindus_clients_images/occupational-3.webp" alt="Banner Image 3">
+              <!-- Duplicate set of images for continuous scroll -->
+              <img src="images/vindus_clients_images/occupational.jpg" alt="Banner Image 1">
+              <img src="images/vindus_clients_images/occupational-2.webp" alt="Banner Image 2">
+              <img src="images/vindus_clients_images/occupational-3.webp" alt="Banner Image 3">
+              <img src="images/vindus_clients_images/occupational.jpg" alt="Banner Image 1">
+              <img src="images/vindus_clients_images/occupational-2.webp" alt="Banner Image 2">
+              <img src="images/vindus_clients_images/occupational-3.webp" alt="Banner Image 3">
+            </div>
+            <h1 class="banner-heading"> Five Star Occupational Health and Safety Audit</h1>
+          </div>
 
        <div class="container my-4">
             <div class="card-header">
                 <div class="card-title">
-                    <h2 style="color: #f6f7f8;text-align: center;padding: 10px;">  Five Star Occupational Health and Safety Audit</h2>
                 </div>
             </div>
 
