--- a/mlcfiresystemservices.html
+++ b/mlcfiresystemservices.html
@@ -695,7 +695,7 @@ According to the guidelines set by the Bureau of Indian Standards (BIS), specifi
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2024 Vindus. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2024 <a href="http://vindusenvironment.in" target="_blank" style="color:antiquewhite;">Vindus</a>. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
