--- a/classroom.html
+++ b/classroom.html
@@ -1174,9 +1174,8 @@ body {
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2024 Vindus. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2024 <a href="http://vindusenvironment.in" target="_blank" style="color:antiquewhite;">Vindus</a>. <span>All Rights Reserved</span></p></div>
 							</div>
-
 
 							<!-- FOOTER SECONDARY LINK -->
 							
