--- a/PLANTSETUPandUPGRADATION.html
+++ b/PLANTSETUPandUPGRADATION.html
@@ -934,11 +934,9 @@
 
 
                         <!-- FOOTER COPYRIGHT -->
-                        <div class="col">
-                            <div class="footer-copyright">
-                                <p class="p-sm">&copy; 2024 Vindus. <span>All Rights Reserved</span></p>
-                            </div>
-                        </div>
+                      <div class="col">
+								<div class="footer-copyright"><p class="p-sm">&copy; 2024 <a href="http://vindusenvironment.in" target="_blank" style="color:antiquewhite;">Vindus</a>. <span>All Rights Reserved</span></p></div>
+							</div>
 
 
                         <!-- FOOTER SECONDARY LINK -->
